# covid-19

./: CMakeLists.txt  README.md
cmake/: common.cmake
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  RenderArea.cpp  RenderArea.h  Subject.h  main.cpp
